--- a/css.css
+++ b/css.css
@@ -1,10 +1,11 @@
 html,body {
+    display: flex;
     min-height: 100vh;
     margin: 0px;
 }
 
 main {
-    min-height: 100vh;
+    min-height: 100%;
     width: 100vw;
     display: flex;
     flex-direction: column;
@@ -61,7 +62,7 @@ nav {
 
 #view {
     width: 100%;
-    min-height: 85vh;
+    min-height: 100%;
     display: flex;
     flex-wrap: wrap;
     align-items: flex-start;
@@ -98,6 +99,13 @@ nav {
     flex-direction: column;
     align-items: center;
     justify-content: space-evenly;
+}
+
+.description {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .menu-item {
