--- a/css.css
+++ b/css.css
@@ -1,4 +1,4 @@
-html,body {
+body {
     display: flex;
     min-height: 100vh;
     margin: 0px;
@@ -15,7 +15,7 @@ main {
 }
 
 nav {
-    max-height: 15%;
+    height: 15%;
     width: 100%;
     font-size: 2em;
     display: flex;
@@ -41,25 +41,6 @@ nav {
     font-size: 2em;
 }
 
-#address {
-    box-sizing: border-box;
-    padding: 5px;
-    background-color: grey;
-    width: 100%;
-    display: flex;
-    flex-wrap: wrap;
-    align-items: center;
-    justify-content: center;
-    color: black;
-    font-size: 1.5em;
-}
-
-#address p {
-
-    margin: 0px 2px;
-    
-}
-
 #hours {
     margin-left: 3%;
     font-weight: bold;
@@ -79,11 +60,11 @@ nav {
 
 #view {
     width: 100%;
-    min-height: 100%;
+    min-height: 85%;
     display: flex;
-    flex-wrap: wrap;
+    flex-direction: column;
     align-items: flex-start;
-    justify-content: flex-start;
+    justify-content: center;
     background-image: url('assets/truck.jpg');
     background-position: center;
     background-size: cover;
@@ -110,7 +91,6 @@ nav {
     font-size: 3em;
 }
 .menu-frame {
-    min-height: 80%;
     width: 100%;
     display: flex;
     flex-direction: column;
@@ -143,8 +123,8 @@ nav {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    height: 20%;
-    min-height: 100px;
+    height: auto;
+    min-height: 75px;
     width: 40%;
     background: grey;
     border-radius: 5px;
