--- a/css.css
+++ b/css.css
@@ -1,12 +1,13 @@
 body {
     display: flex;
     min-height: 100vh;
+    min-width: 100vw;
     margin: 0px;
 }
 
 main {
     min-height: 100%;
-    width: 100vw;
+    width: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -63,8 +64,8 @@ nav {
     min-height: 85%;
     display: flex;
     flex-direction: column;
-    align-items: flex-start;
-    justify-content: center;
+    align-items: center;
+    justify-content: flex-start;
     background-image: url('assets/truck.jpg');
     background-position: center;
     background-size: cover;
@@ -91,6 +92,7 @@ nav {
     font-size: 3em;
 }
 .menu-frame {
+    min-height: 70%;
     width: 100%;
     display: flex;
     flex-direction: column;
@@ -123,8 +125,7 @@ nav {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    height: auto;
-    min-height: 75px;
+    min-height: 20%;
     width: 40%;
     background: grey;
     border-radius: 5px;
