--- a/css.css
+++ b/css.css
@@ -16,7 +16,7 @@ main {
 }
 
 nav {
-    height: 15%;
+    height: 10%;
     width: 100%;
     font-size: 2em;
     display: flex;
@@ -27,7 +27,7 @@ nav {
 }
 
 #logo {
-    width: 60%;
+    width: 50%;
     height: 95%;
 
 }
@@ -61,7 +61,7 @@ nav {
 
 #view {
     width: 100%;
-    min-height: 85%;
+    height: 90%;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -92,7 +92,7 @@ nav {
     font-size: 3em;
 }
 .menu-frame {
-    min-height: 70%;
+    height: 80%;
     width: 100%;
     display: flex;
     flex-direction: column;
@@ -102,9 +102,14 @@ nav {
 
 .description {
     width: 100%;
+    max-height: 10%;
     display: flex;
     flex-direction: column;
     align-items: center;
+}
+
+.description p {
+    margin: 3px;
 }
 
 .menu-item {
@@ -125,7 +130,7 @@ nav {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    min-height: 20%;
+    height: 15%;
     width: 40%;
     background: grey;
     border-radius: 5px;
@@ -139,8 +144,7 @@ nav {
 }
 
 .food-pic {
-    min-height: 90%;
-    max-height: 90%;
+    height: 90%;
     min-width: 100px;
     background-position: center;
     background-size: cover;
@@ -153,9 +157,11 @@ nav {
 }
 
 i {
+    height: 95%;
+    width: 10%;
     color: white;
     margin: 10px;
-    font-size: 1.5em;
+    font-size: 1em;
 }
 
 #menu {
