--- a/css.css
+++ b/css.css
@@ -104,6 +104,7 @@ nav {
     width: 100%;
     max-height: 10%;
     display: flex;
+    font-size: 0.7em;
     flex-direction: column;
     align-items: center;
 }
