--- a/css.css
+++ b/css.css
@@ -21,7 +21,7 @@ nav {
     font-size: 2em;
     display: flex;
     align-items: center;
-    justify-content: flex-start;
+    justify-content: center;
     background-color: #ef5519;
     border-bottom: 5px solid black;
 }
@@ -29,6 +29,9 @@ nav {
 nav a {
     height: 95%;
     max-width: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 #logo {
