--- a/css.css
+++ b/css.css
@@ -42,7 +42,7 @@ nav a {
 }
 
 #menu-button {
-    width: 20%;
+    width: 25%;
     height: 95%;
     display: flex;
     align-items: center;
@@ -175,6 +175,7 @@ i {
 #menu {
     width: 100%;
     list-style-type: none;
+    height: auto;
     color: black;
     margin: 0px;
     background-color: #4b4b47;
@@ -183,7 +184,7 @@ i {
 }
 
 #menu li {
-    height: 25%;
+    height: 20%;
     padding: 5px 30px;
     margin: 10px 5px;
     border: 2px solid white;
